makes additional changes to week one content

--- a/src/styles/course-content-display.module.scss
+++ b/src/styles/course-content-display.module.scss
@@ -13,3 +13,12 @@
     color: black
 }
 
+@media (max-width:700px) {
+    .dayTitle {
+        font-size: 1.1rem;
+    }
+    .small-text {
+        font-size: .8rem;
+    }
+}
+
