Changes link color (anchor tags) for accessibility

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -11,7 +11,7 @@
     flex-grow: 1;
     a {
         text-decoration: none;
-        color: #dc143c;
+        color: #673ab7;
     }
     td {
         font-weight: 700;
