wip: applies recent updates

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -13,7 +13,7 @@
     margin: 0 auto;
     a {
         text-decoration: none;
-        color: #673ab7;
+        color: crimson;
     }
     td {
         font-weight: 700;
