wip: fixes rendering issue and optimizes load

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -47,7 +47,7 @@ h1:first-of-type {
   }
 }
 
-//  Search Bar Styles
+//  Algolia Search Bar Styles:
 
 .ais-Breadcrumb-list,
 .ais-CurrentRefinements-list,
