wip: makes slight css issue

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -43,6 +43,10 @@ span.breadcrumb__separator {
   margin: 0 .25rem 0 0;
 }
 
+ol.breadcrumb__list {
+  height: 2.8rem;
+}
+
 h1:first-of-type {
   line-height: 3.5rem;
 }
